# 2021

./: .gitignore  .gitmodules  CMakeLists.txt  HandmadeMath.h  README.md  build.zig  game.c  game.glsl  math.h  renderer.h
sokol/: shell.html  sokol.c
src/: main.odin  main.zig
